--- a/css/base.css
+++ b/css/base.css
@@ -268,18 +268,16 @@ textarea, form label input::placeholder, form button {font-family:'Fira Sans', s
 #Con form button i, #Whs form button i {padding:0 0 0 0.5em; color:#fff}
 
 /* Página de Font Icons */
-
 .head-subtit a {text-decoration:none; font-weight:700; color:#808285}
 
 .glyphs.character-mapping, .glyphs.css-mapping {padding:1em 0 0}
-
 .glyphs.css-mapping li {margin:1.5em 2em 1.5em 0; display:flex; flex-wrap:wrap; width:22.5%; padding:0; border-bottom:#d1d2d3 1px solid}
 .glyphs.css-mapping .icon {width:30%; color:#4e4d50 !important; overflow:hidden; padding:0 0 0.5em 0}
 .glyphs.css-mapping input {width:70%; font-family:'Fira Sans', sans-serif; font-weight:300; padding:0 0 0.3em 0; font-size:1.2em; border:none; outline:0; text-transform:capitalize; color:#808285}
-.glyphs.character-mapping li {display:flex; flex-wrap:wrap; width:17.5%; margin:1.5em 1em}
-.glyphs.character-mapping .icon {margin:0 auto; width:35%; color:#4e4d50 !important; overflow:hidden}
+.glyphs.character-mapping li {display:flex; flex-wrap:wrap; width:10.3%; margin:0.8em 0.81em; padding:0.4em 0 0.2em 0;  border:1px solid #d8e0e5}
+.glyphs.character-mapping .icon {width:100%; text-align:center; color:#4e4d50 !important}
 .glyphs.character-mapping .icon svg {fill:#000}
-.glyphs.character-mapping input {margin:0 40%; padding:0.2em; width:20%; font-family:'Fira Sans', sans-serif; font-weight:300; font-size:1.2em; border:none; border-bottom:1px solid #d8e0e5; text-align:center; color:#808285}
+.glyphs.character-mapping input {padding:0 0.5em; width:100%; font-family:'Fira Sans', sans-serif; font-weight:300; font-size:1.4em; border:none; text-align:left; color:#808285}
 
 /* Footer */
 footer p {padding:0.7em 0 0 0; font-size:1em}
