--- a/css/base.css
+++ b/css/base.css
@@ -82,10 +82,9 @@ p {font-weight:300; font-size:1.3em; line-height:1.3em}
 .sm-foot {height:40px}
 
 /* Botones */
-.tabs li {border-bottom:#d1d2d3 4px solid}
-.tabs li:hover {border-bottom:#4e4d50 4px solid; -moz-transition:all 500ms ease-in; -webkit-transition:all 500ms ease-in; -o-transition:all 500ms ease-in}
-.tabs li:focus { border-bottom:#4e4d50 4px solid}
-.selected {border-bottom:#4e4d50 4px solid}
+.tabs li{border-bottom:#d1d2d3 4px solid}
+/* .tabs li:hover {border-bottom:#4e4d50 4px solid; -moz-transition:all 500ms ease-in; -webkit-transition:all 500ms ease-in; -o-transition:all 500ms ease-in} */
+.tabs li.selected {border-bottom:#4e4d50 4px solid}
 .tabs .btn {position:relative; display:flex; flex-direction:column; justify-content:center; width:6em; height:6em; margin:0 0 0.25em 0; text-align:center; overflow:hidden}
 .tabs .btn-disp {cursor:pointer}
 .tabs .btn-disp:focus { outline: none;}
