--- a/css/base.css
+++ b/css/base.css
@@ -94,10 +94,13 @@ p {font-weight:300; font-size:1.3em; line-height:1.3em}
 .tabs .btn-disp:not(:hover) i {font-size:1em; -webkit-transition-duration:0.4s; transition-duration:0.4s}
 
 /* Header */
+.logo { width: 20%}
 .logo img { width: 90%}
+.sm { width: 80%}
 
 
 /* Historia - nosotros */
+#ini {width: 50%}
 #ini .stories p, .head-subtit {font-size:1.9em; line-height:1.2em; padding:0 0 1.4em 0}
 #ini .canvas {height:100%}
 
