--- a/css/base.css
+++ b/css/base.css
@@ -1,9 +1,7 @@
 /* Novanet Estilos */
 body {color:#808285; font-family:'Fira Sans', sans-serif}
 
-.container {background:url(../img/bg.svg); margin:0 auto; padding:4em 5em 0 5em;}
-.flexbox {display:flex; flex-wrap:wrap}
-.flex {display:flex; flex-direction:column; justify-content:center}
+.container {display:flex; flex-wrap:wrap; flex-direction:column; justify-content:center; background:url(../img/bg.svg); margin:0 auto; padding:4em 5em 0 5em;}
 a {text-decoration:none}
 ul li {list-style:none; text-align:center}
 table {border-collapse:separate; border-spacing:0; vertical-align:middle}
@@ -24,7 +22,7 @@ section {padding:2.5em 0}
 
 .col-80, .col-75, .col-50, .col-33, .col-25 {padding:0 2em 0 0; -webkit-box-sizing:border-box; -moz-box-sizing:border-box; box-sizing:border-box}
 .col-20 {padding:0 1em 0 0; -webkit-box-sizing:border-box; -moz-box-sizing:border-box; box-sizing:border-box}
-header {}
+
 div#nos, .porfull {padding:2.5em 0 0 0}
 footer {padding:2em 0}
 
@@ -77,8 +75,8 @@ p {font-weight:300; font-size:1.3em; line-height:1.3em}
 .graybg-3 {background:#4e4d50}
 
 /* Redes Sociales */
-.sm ul li {width:1.7em; height:1.7em; margin:0 0.3em; list-style:none; border-radius:50%; text-align:center; border:#808285 solid 2px}
-.sm-head {float:right; height:60px}
+
+
 .sm-foot {height:40px}
 
 /* Botones */
@@ -94,13 +92,16 @@ p {font-weight:300; font-size:1.3em; line-height:1.3em}
 .tabs .btn-disp:not(:hover) i {font-size:1em; -webkit-transition-duration:0.4s; transition-duration:0.4s}
 
 /* Header */
-.logo { width: 20%}
+header { display: flex; flex-direction:row;}
+.logo { width: 20%; height: 4em; order: 1}
 .logo img { width: 90%}
-.sm { width: 80%}
-
+.sm { width: 80%; order: 2; display: flex; justify-content:flex-end;}
+ul.sm-list { width: 15%; display: flex; }
+ul.sm-list li {width:1.7em; height:1.7em; margin:0 0.3em; list-style:none; border-radius:50%; text-align:center; border:#808285 solid 2px;}
+ul.sm-list li i {padding-top: 0.3em;}
 
 /* Historia - nosotros */
-#ini {width: 50%}
+#ini {width: 50%; }
 #ini .stories p, .head-subtit {font-size:1.9em; line-height:1.2em; padding:0 0 1.4em 0}
 #ini .canvas {height:100%}
 
