--- a/css/base.css
+++ b/css/base.css
@@ -9,6 +9,7 @@ caption, th, td {text-align:left; font-weight:normal; vertical-align:middle}
 a img {border:none}
 
 section, .stories, #nos {padding:2em 0; -webkit-box-sizing:border-box; -moz-box-sizing:border-box; box-sizing:border-box}
+#pro, #hac { width: 100%}
 footer {padding:2em 0}
 .line {border-bottom:#d1d2d3 solid 1px}
 
@@ -73,9 +74,8 @@ p {font-weight:300; font-size:1.3em; line-height:1.3em}
 .tabs .btn-disp:not(:hover) i {font-size:1em; -webkit-transition-duration:0.4s; transition-duration:0.4s}
 .tabs-info {animation: fadeIn 0.3s ; -webkit-animation: fadeIn 0.3s ; -moz-animation: fadeIn 0.3s; -o-animation: fadeIn 0.3s;}
 @keyframes fadeIn { 0% { opacity: 0;}  100% { opacity: 100% }}
-
-.tabs-item {width: 33%; min-height:14em; }
-.tabs-item p { font-size:1.1em; line-height:1.3em; padding-right:0.5em}
+.tab-item {width: 33%; min-height:14em; }
+.tab-item p { font-size:1.1em; line-height:1.3em; padding-right:0.5em}
 
 /* Header */
 header { display: flex; flex-wrap: wrap; width:100%}
@@ -85,6 +85,8 @@ header { display: flex; flex-wrap: wrap; width:100%}
 ul.sm-list { width: 15%; display: flex; }
 ul.sm-list li {width:1.7em; height:1.7em; margin:0 0.3em; list-style:none; border-radius:50%; text-align:center; border:#808285 solid 2px;}
 ul.sm-list li i {padding-top: 0.3em;}
+
+
 
 /* Historia - nosotros */
 #ini {display: flex; flex-wrap: wrap; width:100%}
@@ -99,10 +101,73 @@ ul.sm-list li i {padding-top: 0.3em;}
 #hac .ico i { line-height: 9.5em; font-size:0.9em; color:#fff}
 #hac .ico:hover {transform:translate(0.5em); -moz-transition:all 0.2s ease-in; -webkit-transition:all 0.2s ease-in; -o-transition:all 0.2s ease-in; transition:all 0.2s ease-in}
 #hac .ico:not(:hover) {transform:translate(0); -moz-transition:all 0.2s ease-out; -webkit-transition:all 0.2s ease-out; -o-transition:all 0.2s ease-out; transition:all 0.2s ease-out}
-#diseno, #desarrollo, #integracion { display: flex; flex-wrap: wrap;}
-#diseno h3 , #desarrollo h3, #integracion h3 { width: 100%}
+#diseno, #desarrollo, #integracion, #branding, #disenoweb, #logotipos { display: flex; flex-wrap: wrap;}
+#diseno h3 , #desarrollo h3, #integracion h3, #branding h3, #disenoweb h3, #logotipos h3 { width: 100%}
 
 /* Portafolio */
+.circleBg {position:relative; display: inline-block; background:#79c9f1; -webkit-clip-path: circle(43% at 50% 50%); clip-path: circle(43% at 50% 50%);}
+.circle  {position:relative; -webkit-clip-path: circle(42.5% at 50% 52%); clip-path: circle(42.5% at 50% 52%); }
+.squareBg {display: inline-block; position:relative; background:#79c9f1; box-sizing:border-box; -webkit-clip-path: inset(9% 9% 12% 9%); clip-path: inset(9% 9% 12% 9%);}
+.square {display: inline-block; position:relative; background:#79c9f1; box-sizing:border-box; -webkit-clip-path: inset(10.5% 10.5%); clip-path: inset(10.5% 10.5%);}
+.triangleBg {display: inline-block; position:relative; background:#79c9f1; box-sizing:border-box; -webkit-clip-path: polygon(50% 0%, 0% 90%, 100% 90%);clip-path:polygon(50% 6%, 0% 90%, 100% 90%);}
+.triangle {display: inline-block; position:relative; background:#79c9f1; box-sizing:border-box; -webkit-clip-path: polygon(50% 10%, 0% 80%, 100% 80%);clip-path: polygon(50% 9%, 3% 91%, 97% 91%);}
+.triangle img {width: 98% !important; margin: 2% 1%;}
+
+/* Modal styles based on http://jsfiddle.net/4qck1vr7/ */
+ .modalDialog {
+        position: fixed;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        background: rgba(255,255,255,0.7);
+        z-index: 99999;
+        opacity:0;
+        -webkit-transition: opacity 400ms ease-in;
+        -moz-transition: opacity 400ms ease-in;
+        transition: opacity 400ms ease-in;
+        pointer-events: none;
+    }
+
+    .modalDialog:target {
+        opacity:1;
+        pointer-events: auto;
+    }
+
+    .modalDialog > div {
+        width: 45%;
+        position: relative;
+        margin: 7.5% auto;
+    }
+
+    img.preview {-moz-box-shadow: 1px 1px 3px #666;
+    -webkit-box-shadow: 1px 1px 3px #666;
+    box-shadow: 1px 1px 3px #666;}
+
+    a.close {
+        background: #30789c;
+        color: #fff;
+        line-height: 25px;
+        position: absolute;
+        right: -12px;
+        text-align: center;
+        top: -10px;
+        width: 26px;
+        text-decoration: none;
+        font-weight: bold;
+        -webkit-border-radius: 12px;
+        -moz-border-radius: 12px;
+        border-radius: 12px;
+        -moz-box-shadow: 1px 1px 3px #666;
+        -webkit-box-shadow: 1px 1px 3px #666;
+        box-shadow: 1px 1px 3px #666;
+
+    }
+
+    a.close:hover { background: #79c9f1}
+
+
+
 #Por .col-33 {margin:0.7em 0 3em 0}
 #Por ul {margin:1em 1em 0 0}
 #Por ul li {width:29%}
