--- a/css/base.css
+++ b/css/base.css
@@ -9,7 +9,7 @@ caption, th, td {text-align:left; font-weight:normal; vertical-align:middle}
 a img {border:none}
 
 section, .stories, #nos {padding:2em 0; -webkit-box-sizing:border-box; -moz-box-sizing:border-box; box-sizing:border-box}
-#pro, #hac { width: 100%}
+#por, #hac { width: 100%}
 footer {padding:2em 0}
 .line {border-bottom:#d1d2d3 solid 1px}
 
@@ -105,83 +105,17 @@ ul.sm-list li i {padding-top: 0.3em;}
 #diseno h3 , #desarrollo h3, #integracion h3, #branding h3, #disenoweb h3, #logotipos h3 { width: 100%}
 
 /* Portafolio */
-.circleBg {position:relative; display: inline-block; background:#79c9f1; -webkit-clip-path: circle(43% at 50% 50%); clip-path: circle(43% at 50% 50%);}
-.circle  {position:relative; -webkit-clip-path: circle(42.5% at 50% 52%); clip-path: circle(42.5% at 50% 52%); }
-.squareBg {display: inline-block; position:relative; background:#79c9f1; box-sizing:border-box; -webkit-clip-path: inset(9% 9% 12% 9%); clip-path: inset(9% 9% 12% 9%);}
-.square {display: inline-block; position:relative; background:#79c9f1; box-sizing:border-box; -webkit-clip-path: inset(10.5% 10.5%); clip-path: inset(10.5% 10.5%);}
-.triangleBg {display: inline-block; position:relative; background:#79c9f1; box-sizing:border-box; -webkit-clip-path: polygon(50% 0%, 0% 90%, 100% 90%);clip-path:polygon(50% 6%, 0% 90%, 100% 90%);}
-.triangle {display: inline-block; position:relative; background:#79c9f1; box-sizing:border-box; -webkit-clip-path: polygon(50% 10%, 0% 80%, 100% 80%);clip-path: polygon(50% 9%, 3% 91%, 97% 91%);}
+.circleBg {position:relative; display: inline-block; -webkit-clip-path: circle(43% at 50% 50%); clip-path: circle(43% at 50% 50%);}
+.circle  {position:relative; -webkit-clip-path: circle(42% at 50% 51.5%); clip-path: circle(42% at 50% 51.5%); }
+.squareBg {display: inline-block; position:relative; box-sizing:border-box; -webkit-clip-path: inset(9% 9% 12% 9%); clip-path: inset(9% 9% 12% 9%);}
+.square {display: inline-block; position:relative; box-sizing:border-box; -webkit-clip-path: inset(11% 10.5%); clip-path: inset(11% 10.5%);}
+.triangleBg {display: inline-block; position:relative; box-sizing:border-box; -webkit-clip-path: polygon(50% 0%, 0% 90%, 100% 90%);clip-path:polygon(50% 6%, 0% 90%, 100% 90%);}
+.triangle {display: inline-block; position:relative; box-sizing:border-box; -webkit-clip-path: polygon(50% 10%, 0% 80%, 100% 80%);clip-path: polygon(50% 9%, 3% 91%, 97% 91%);}
 .triangle img {width: 98% !important; margin: 2% 1%;}
 
-/* Modal styles based on http://jsfiddle.net/4qck1vr7/ */
- .modalDialog {
-        position: fixed;
-        top: 0;
-        right: 0;
-        bottom: 0;
-        left: 0;
-        background: rgba(255,255,255,0.7);
-        z-index: 99999;
-        opacity:0;
-        -webkit-transition: opacity 400ms ease-in;
-        -moz-transition: opacity 400ms ease-in;
-        transition: opacity 400ms ease-in;
-        pointer-events: none;
-    }
-
-    .modalDialog:target {
-        opacity:1;
-        pointer-events: auto;
-    }
-
-    .modalDialog > div {
-        width: 45%;
-        position: relative;
-        margin: 7.5% auto;
-    }
-
-    img.preview {-moz-box-shadow: 1px 1px 3px #666;
-    -webkit-box-shadow: 1px 1px 3px #666;
-    box-shadow: 1px 1px 3px #666;}
-
-    a.close {
-        background: #30789c;
-        color: #fff;
-        line-height: 25px;
-        position: absolute;
-        right: -12px;
-        text-align: center;
-        top: -10px;
-        width: 26px;
-        text-decoration: none;
-        font-weight: bold;
-        -webkit-border-radius: 12px;
-        -moz-border-radius: 12px;
-        border-radius: 12px;
-        -moz-box-shadow: 1px 1px 3px #666;
-        -webkit-box-shadow: 1px 1px 3px #666;
-        box-shadow: 1px 1px 3px #666;
-
-    }
-
-    a.close:hover { background: #79c9f1}
-
-
-
-#Por .col-33 {margin:0.7em 0 3em 0}
-#Por ul {margin:1em 1em 0 0}
-#Por ul li {width:29%}
-#Por ul li div img {width:100%}
-
-.circleBg, .squareBg, .triangleBg, .circle, .square, .triangle {position:relative; display:inline-block}
-.squareBg, .square, .triangleBg, .triangle {box-sizing:border-box}
-.circleBg {-webkit-clip-path:circle(43% at 50% 50%); clip-path:circle(43% at 50% 50%)}
-.circle  {-webkit-clip-path:circle(42.5% at 50% 52%); clip-path:circle(42.5% at 50% 52%)}
-.squareBg {-webkit-clip-path:inset(9% 9% 12% 9%); clip-path:inset(9% 9% 12% 9%)}
-.square {-webkit-clip-path:inset(10.5% 10.5%); clip-path:inset(10.5% 10.5%)}
-.triangleBg {-webkit-clip-path:polygon(50% 0%, 0% 90%, 100% 90%); clip-path:polygon(50% 6%, 0% 90%, 100% 90%)}
-.triangle {-webkit-clip-path:polygon(50% 10%, 0% 80%, 100% 80%); clip-path:polygon(50% 9%, 3% 91%, 97% 91%)}
-.triangle img {width:98% !important; margin:2% 1%}
+#por .thumbs {margin:0.7em 0 3em 0}
+#por .thumbs .thumb {width: 29%}
+#por .thumbs .thumb img {width:100%}
 
 #Por .link-ver p {font-weight:700; font-size:1.1em}
 
