--- a/css/base.css
+++ b/css/base.css
@@ -117,6 +117,21 @@ ul.sm-list li i {padding-top: 0.3em;}
 #por .thumbs .thumb {width: 29%}
 #por .thumbs .thumb img {width:100%}
 
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    padding-top: 100px; /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+
 #Por .link-ver p {font-weight:700; font-size:1.1em}
 
 .porfull .porfull-resu {margin:0 0 3em 0}
