Crazy modal implementation

--- a/css/base.css
+++ b/css/base.css
@@ -119,7 +119,7 @@ ul.sm-list li i {padding-top: 0.3em;}
 
 .modal {
     display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */
+    position: absolute;; /* Stay in place */
     z-index: 1; /* Sit on top */
     padding-top: 100px; /* Location of the box */
     left: 0;
