--- a/css/base.css
+++ b/css/base.css
@@ -117,20 +117,47 @@ ul.sm-list li i {padding-top: 0.3em;}
 #por .thumbs .thumb {width: 29%}
 #por .thumbs .thumb img {width:100%}
 
+/* The Modal (background) */
 .modal {
     display: none; /* Hidden by default */
-    position: absolute;; /* Stay in place */
+    position: fixed; /* Stay in place */
     z-index: 1; /* Sit on top */
-    padding-top: 100px; /* Location of the box */
     left: 0;
     top: 0;
     width: 100%; /* Full width */
     height: 100%; /* Full height */
     overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    background: rgba(255,255,255,0.7);
+
 }
 
+/* Modal Content/Box */
+.modal-content {
+    margin: 1.5% auto; /* 15% from the top and centered */
+    padding: 10px;
+    width: 50%; /* Could be more or less, depending on screen size */
+}
+
+/* The Close Button */
+
+span.close { position:relative; display: inline-block; -webkit-clip-path: circle(43% at 50% 50%); clip-path: circle(43% at 50% 50%)}
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 3em;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+img.preview { margin: 0 auto; max-width: 100%; -moz-box-shadow: 1px 1px 3px #666;
+    -webkit-box-shadow: 1px 1px 3px #666;
+    box-shadow: 1px 1px 3px #666;}
 
 #Por .link-ver p {font-weight:700; font-size:1.1em}
 
