--- a/css/slick-theme.css
+++ b/css/slick-theme.css
@@ -66,9 +66,9 @@
 .slick-prev:before,
 .slick-next:before
 {font-family:'Fira Sans', sans-serif;     font-weight: 500;
-        font-size: 26px;
+        font-size: 81px;
     /* line-height: 1; */
-    color: #055789;
+    color: #a80e41;
 
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
@@ -85,11 +85,11 @@
 }
 .slick-prev:before
 {
-    content: "«";
+    content: "🢐";
 }
 [dir='rtl'] .slick-prev:before
 {
-    content: "«";
+    content: "🢐";
 }
 
 .slick-next
@@ -103,11 +103,11 @@
 }
 .slick-next:before
 {
-    content: "»";
+    content: "🢒";
 }
 [dir='rtl'] .slick-next:before
 {
-    content: "»";
+    content: "🢒";
 }
 
 /* Dots */
