--- a/css/base.css
+++ b/css/base.css
@@ -72,6 +72,7 @@ p {font-weight:300; font-size:1.3em; line-height:1.3em}
 .tabs .btn:hover:before {height:6em}
 .tabs .btn:hover i {font-size:1.2em; -webkit-transition-duration:0.4s; transition-duration:0.4s}
 .tabs .btn:not(:hover) i {font-size:1em; -webkit-transition-duration:0.4s; transition-duration:0.4s}
+.tabs .btn i {margin:0.3em 0 0; font-size:1em; color:#fff}
 .tabs-info {animation: fadeIn 0.3s ; -webkit-animation: fadeIn 0.3s ; -moz-animation: fadeIn 0.3s; -o-animation: fadeIn 0.3s;}
 @keyframes fadeIn { 0% { opacity: 0;}  100% { opacity: 100% }}
 .tab-item {width: 33%; min-height:14em; }
@@ -79,12 +80,13 @@ p {font-weight:300; font-size:1.3em; line-height:1.3em}
 
 /* Header */
 header { display: flex; flex-wrap: wrap; width:100%}
-.logo { width: 20%; height: 4em; order: 1}
-.logo img { width: 80%}
-.sm { width: 80%; order: 2; display: flex; justify-content:flex-end;}
+header .logo { width: 20%; height: 4em; order: 1}
+header .logo img { width: 80%}
+header .sm { width: 80%; order: 2; display: flex; justify-content:flex-end;}
 ul.sm-list { width: 16%; display: flex; }
 ul.sm-list li {width:2.5em; height:2.5em; margin:0 0.3em; list-style:none; border-radius:50%; text-align:center; border:#808285 solid 2px;}
-ul.sm-list li i {padding-top: 0.35em;}
+ul.sm-list li i {font-size:1.45em; padding-top: 0.35em;}
+i {font-style:normal; color:#808285}
 
 /* Historia - nosotros */
 #ini {display: grid; grid-auto-flow: column; grid-template-columns: 50% 50%;}
@@ -110,53 +112,19 @@ ul.sm-list li i {padding-top: 0.35em;}
 #por .thumbs {margin:0.7em 0 3em 0}
 #por .thumbs .thumb {width: 7em;margin: 4% 7% 0 0}
 #por .thumbs .thumb img {width:100%}
-
-/* The Modal (background) */
-.modal {
-    display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
-    left: 0;
-    top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background: rgba(255,255,255,0.7);
-    animation: fadeIn 0.3s ; -webkit-animation: fadeIn 0.3s ; -moz-animation: fadeIn 0.3s; -o-animation: fadeIn 0.3s;
-
-}
-
-/* Modal Content/Box */
-.modal-content {
-    margin: 1.5% auto; /* 15% from the top and centered */
-    padding: 10px;
-    width: 50%; /* Could be more or less, depending on screen size */
-}
-
-/* The Close Button */
-
-span.close { position:relative; display: inline-block; -webkit-clip-path: circle(43% at 50% 50%); clip-path: circle(43% at 50% 50%)}
-.close {
-    color: #ff7e00;
-    float: right;
-    font-size: 4em;
-    font-weight: bold;
-}
-
-.close:hover,
-.close:focus {
-    color: black;
-    text-decoration: none;
-    cursor: pointer;
-}
-
-img.preview { margin: 0 auto; max-width: 100%; -moz-box-shadow: 1px 1px 3px #666;
-    -webkit-box-shadow: 1px 1px 3px #666;
-    box-shadow: 1px 1px 3px #666;}
-
 #por .section-link {font-weight:700; font-size:1.1em; color:#4e4d50}
 
-#map { width: 100%; height: 400px; margin-top: 1em; background-color: grey;}
+/* The Modal (background) */
+.modal {display: none; position: fixed; z-index: 1; left: 0; top: 0; width: 100%; height: 100%; overflow: auto; background: rgba(255,255,255,0.7); animation: fadeIn 0.3s ; -webkit-animation: fadeIn 0.3s ; -moz-animation: fadeIn 0.3s; -o-animation: fadeIn 0.3s}
+
+/* Modal Content/Box */
+.modal-content {margin: 1.5% auto;  padding: 10px; width: 50% }
+
+/* The Close Button */
+span.close { position:relative; display: inline-block; -webkit-clip-path: circle(43% at 50% 50%); clip-path: circle(43% at 50% 50%)}
+.close { color: #ff7e00; float: right; font-size: 4em; font-weight: bold;}
+.close:hover, .close:focus { color: black; text-decoration: none; cursor: pointer;}
+img.preview { margin: 0 auto; max-width: 100%; -moz-box-shadow: 1px 1px 3px #666; -webkit-box-shadow: 1px 1px 3px #666; box-shadow: 1px 1px 3px #666 }
 
 .porfull .porfull-resu {margin:0 0 3em 0}
 .porfull .col-33 {margin:2.5em 0 0 0 !important}
@@ -170,23 +138,31 @@ img.preview { margin: 0 auto; max-width: 100%; -moz-box-shadow: 1px 1px 3px #666
 #cli .logos-clientes { height: 100%; height: 220px}
 
 /* Contacto y Login Whs */
-textarea, form label input::placeholder, form button {font-family:'Fira Sans', sans-serif}
+textarea, form input::placeholder, form button {font-family:'Fira Sans', sans-serif}
 #con .col-50 p {padding:0 0 2em 0}
 #Whs .col-50 p {padding:1em 0 2em 0}
 #con .col-50 p, #Whs .col-50 p {border-bottom:#ecedee dotted 4px}
-
 #con form, #whs form {margin:3em 0; padding:2em; width:50%; -webkit-box-sizing:border-box; -moz-box-sizing:border-box; box-sizing:border-box; background:#f2efef}
-#con form h4, #Whs form h4 {margin:0}
-#con form input, form textarea, #Whs form label input {width:100%; margin:2em 0 0 0; font-weight:300; font-size:1.2em; background:none; border:none}
-#con form input, form textarea {border-bottom:#00bebe 1px solid}
-#Whs form input {border-bottom:#008ed2 1px solid}
+#con form h4, #whs form h4 {margin:0}
+#con form input[type=text], form textarea, #whs form input[type=text] {width:100%; margin:1em 0 1.5em 0; font-weight:300; font-size:1.2em; background:none; border:none}
+#con form input[type=text], form textarea {border-bottom:#00bebe 1px solid}
+#whs form input {border-bottom:#008ed2 1px solid}
 #con form textarea {resize:none; overflow:hidden}
-#con form input::placeholder, #Whs form label input::placeholder {font-weight:300}
-#con form button, #Whs form button {margin:1.8em 0 0 0; padding:0.3em 1em; font-size:1.2em; color:#fff; border:none}
-#con form button i, #Whs form button i {padding:0 0 0 0.5em; color:#fff}
+#con form input::placeholder, #whs form input::placeholder {font-weight:300}
+#con form input[type=submit], #whs form input[type=submit] {padding:0.3em 1em; font-size:1.2em; color:#fff; border:none}
+#con form input[type=submit] i, #whs form input[type=submit] i {padding:0 0 0 0.5em; color:#fff}
+#map { width: 100%; height: 400px; margin-top: 1em; background-color: grey;}
 
 /* Footer */
-footer p {padding:0.7em 0 0 0; font-size:1em}
+footer { display: flex; flex-wrap: wrap; width:100% }
+footer p {padding:0.7em 0 0 0; font-size:1.2em; line-height: 1.2em}
+footer .logo { width: 15%; height: 4em; order: 1}
+footer .logo img { width: 80% }
+footer .legal { width: 25%; order: 2; display: flex;}
+footer .sm { width: 60%; order: 3; display: flex; justify-content:flex-end;}
+footer ul.sm-list { width: 20%; display: flex; }
+footer ul.sm-list li {width:2em; height:2em; margin:0 0.3em; list-style:none; border-radius:50%; text-align:center; border:#808285 solid 2px;}
+footer ul.sm-list li i {font-size:1.25em; padding-top: 0.25em;}
 
 /* Font Icons */
 .glyphs.character-mapping, .glyphs.css-mapping {padding:1em 0 0}
@@ -197,11 +173,6 @@ footer p {padding:0.7em 0 0 0; font-size:1em}
 .glyphs.character-mapping .icon {width:100%; padding:0.45em 0 0 0; text-align:center; color:#4e4d50 !important; border:1px solid #d1d2d3}
 .glyphs.character-mapping .icon svg {fill:#000}
 .glyphs.character-mapping input {margin:0.5em 0 0; padding:0.3em 0; width:100%; font-family:'Fira Sans', sans-serif; font-weight:300; font-size:1.3em; border:none; text-align:center; color:#fff; background:#808285}
-
-/* Iconos */
-i {font-style:normal; color:#808285}
-ul li i {font-size:1.45em}
-.tabs .btn i {margin:0.3em 0 0; font-size:1em; color:#fff}
 
 @font-face {font-family:"novanet-icons";
   src:url("../fonts/novanet-icons.eot");
