--- a/css/base.css
+++ b/css/base.css
@@ -9,15 +9,15 @@ caption, th, td {text-align:left; font-weight:normal; vertical-align:middle}
 a img {border:none}
 
 section, .stories, #nos {padding:2em 0; -webkit-box-sizing:border-box; -moz-box-sizing:border-box; box-sizing:border-box}
-#por, #hac, #cli, #con { width: 100%}
+#por, #por-ini, #hac, #cli, #con { width: 100%}
 footer {padding:2em 0}
 .line {border-bottom:#d1d2d3 solid 1px}
 
 /* Tipografia */
 h1 {font-style:italic; font-weight:700; font-size:3.1em; line-height:1.1em}
-h2 {margin:0 0 0.3em 0; font-weight:900; font-size:1.8em; color:#4e4d50 }
-h3 {margin:0.8em 0 0.2em 0; font-weight:900; font-size:1.5em}
-h4 {margin:0.4em 0 0.3em 0; font-weight:700; font-size:1.25em; color:#4e4d50}
+h2 {margin:0 0 0.2em 0; font-weight:900; font-size:1.8em; color:#4e4d50 }
+h3 {margin:0.8em 0 0.1em 0; font-weight:900; font-size:1.5em}
+h4 {margin:0.4em 0 0.1em 0; font-weight:700; font-size:1.25em; color:#4e4d50}
 p {font-weight:300; font-size:1.3em; line-height:1.3em}
 
 /* Colores */
@@ -107,10 +107,10 @@ i {font-style:normal; color:#808285}
 .triangleBg {display: inline-block; position:relative; box-sizing:border-box; -webkit-clip-path: polygon(50% 0%, 0% 90%, 100% 90%);clip-path:polygon(50% 6%, 0% 90%, 100% 90%);}
 .triangle {display: inline-block; position:relative; box-sizing:border-box; -webkit-clip-path: polygon(50% 10%, 0% 80%, 100% 80%);clip-path: polygon(50% 9%, 3% 91%, 97% 91%);}
 .triangle img {width: 98% !important; margin: 2% 1%;}
-#por .thumbs {margin:0.7em 0 3em 0}
-#por .thumbs .thumb {width: 7em;margin: 4% 7% 0 0}
-#por .thumbs .thumb img {width:100%}
-#por .section-link {font-weight:700; font-size:1.1em; color:#4e4d50}
+#por .thumbs, #por-ini .thumbs {margin:0.7em 0 3em 0}
+#por .thumbs .thumb, #por-ini .thumbs .thumb  {width: 7em;margin: 4% 7% 0 0}
+#por .thumbs .thumb img, #por-ini .thumbs .thumb img {width:100%}
+#por .section-link, #por-ini .section-link {font-weight:700; font-size:1.1em; color:#4e4d50}
 
 /* The Modal (background) */
 .modal {display: none; position: fixed; z-index: 1; left: 0; top: 0; width: 100%; height: 100%; overflow: auto; background: rgba(255,255,255,0.7); animation: fadeIn 0.3s ; -webkit-animation: fadeIn 0.3s ; -moz-animation: fadeIn 0.3s; -o-animation: fadeIn 0.3s}
