--- a/css/base.css
+++ b/css/base.css
@@ -73,7 +73,7 @@ p {font-weight:300; font-size:1.3em; line-height:1.4em}
 .tabs .btn i {margin:0.3em 0 0; font-size:1em; color:#fff}
 .tabs-info {animation: fadeIn 0.3s ; -webkit-animation: fadeIn 0.3s ; -moz-animation: fadeIn 0.3s; -o-animation: fadeIn 0.3s;}
 @keyframes fadeIn { 0% { opacity: 0;}  100% { opacity: 100% }}
-.tab-item {width: 33%; min-height:14em; }
+.tab-item {width: 33%; }
 .tab-item p {font-size: 1.2em; line-height: 1.4em; padding-right: 1em;}
 .tab-item p.dates { font-size: 1.2em; line-height: 1.1em;; padding-right: 1em; font-style: italic;}
 
@@ -109,9 +109,10 @@ i {font-style:normal; color:#808285}
 .triangle {display: inline-block; position:relative; box-sizing:border-box; -webkit-clip-path: polygon(50% 10%, 0% 80%, 100% 80%);clip-path: polygon(50% 9%, 3% 91%, 97% 91%);}
 .triangle img {width: 98% !important; margin: 2% 1%;}
 #por .thumbs, #por-ini .thumbs {margin:0em 0 3em 0}
-#por .thumbs .thumb, #por-ini .thumbs .thumb  {width: 7em;margin: 0 7% 0 0}
+#por .thumbs .thumb, #por-ini .thumbs .thumb  {width: 7em;margin: 0.5em 1em 0 0}
 #por .thumbs .thumb img, #por-ini .thumbs .thumb img {width:100%}
 #por .section-link, #por-ini .section-link {font-weight:700; font-size:1.1em; color:#4e4d50}
+#por a.url { line-height: 1.6em; font-weight: 700}
 
 /* The Modal (background) */
 .modal {display: none; position: fixed; z-index: 1; left: 0; top: 0; width: 100%; height: 100%; overflow: auto; background: rgba(255,255,255,0.7); animation: fadeIn 0.3s ; -webkit-animation: fadeIn 0.3s ; -moz-animation: fadeIn 0.3s; -o-animation: fadeIn 0.3s}
