--- a/css/base.css
+++ b/css/base.css
@@ -82,10 +82,9 @@ section .tab-item p.dates { font-size: 1.2em; line-height: 1.1em;; padding-right
 
 nav { width: 6%; display: flex; flex-wrap: wrap; justify-content: center; padding-top: 4em}
 nav .tabs { position: fixed;}
-nav .tabs li { border-radius: 50%; min-width: 58px; min-height: 58px; margin-bottom: 1em; box-sizing: border-box; padding:0.6em;}
+nav .tabs li { border-radius: 50%; min-width: 58px; min-height: 58px; margin-bottom: 1em; box-sizing: border-box; padding: 0.7em 0.6em 0 0.6em;}
 nav .tabs li i { font-size: 0.55em;color: white}
 nav .tabs li i.fa-chevron-up, nav .tabs li i.fa-chevron-left { padding-top: 1em; font-size: 0.75em;}
-
 
 /* Header */
 header { display: flex; flex-wrap: wrap; width:100%}
@@ -98,8 +97,9 @@ ul.sm-list li i {font-size:1.45em; padding-top: 0.35em;}
 i {font-style:normal; color:#808285}
 
 /* Historia - nosotros */
-#ini {display: grid; grid-auto-flow: column; grid-template-columns: 50% 50%;}
-#ini canvas.anim { grid-row: 1 / span 2;}
+#ini { width:100%; display: grid; grid-auto-flow: column; grid-template-columns: 50% 50%;}
+#ini canvas.ini { grid-row: 1 / span 2;}
+
 .stories p {font-size:1.9em; line-height:1.2em;}
 
 /* Hacemos */
@@ -154,12 +154,12 @@ textarea, form input::placeholder, form button {font-family:'Fira Sans', sans-se
 #con .col-50 p, #Whs .col-50 p {border-bottom:#ecedee dotted 4px}
 #con form, #whs form {margin:3em 0; padding:2em; width:50%; -webkit-box-sizing:border-box; -moz-box-sizing:border-box; box-sizing:border-box; background:#f2efef}
 #con form h4, #whs form h4 {margin:0}
-#con form input[type=text], form textarea, #whs form input[type=text] {width:100%; margin:1em 0 1.5em 0; font-weight:300; font-size:1.2em; background:none; border:none}
+#con form input[type=text], form textarea, #whs form input[type=text], #whs form input[type=password] {width:100%; margin:1em 0 1.5em 0; font-weight:300; font-size:1.2em; background:none; border:none}
 #con form input[type=text], form textarea {border-bottom:#00bebe 1px solid}
-#whs form input {border-bottom:#008ed2 1px solid}
+#whs form input[type=text], #whs form input[type=password] {border-bottom:#008ed2 1px solid}
 #con form textarea {resize:none; overflow:hidden}
 #con form input::placeholder, #whs form input::placeholder {font-weight:300}
-#con form input[type=submit], #whs form input[type=submit] {padding:0.3em 1em; font-size:1.2em; color:#fff; border:none}
+#con form input[type=submit], #whs form input[type=submit] { font-family:'Fira Sans', sans-serif; font-weight: 300; padding:0.3em 1em; font-size:1.2em; color:#fff; border:none}
 #con form input[type=submit] i, #whs form input[type=submit] i {padding:0 0 0 0.5em; color:#fff}
 #map { width: 100%; height: 400px; margin-top: 1em; background-color: grey;}
 
